--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,30 @@
 /* all stylea */
 * {
     margin: 0;
-    font-family: 'Poppins', sans-serif;
 }
+
+/* main font style  and others style*/
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #f3f1ff;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+}
+
+.coantiner {
+    background-color: white;
+    width: 870px;
+    padding: 30px;
+}
+
+hr {
+    border: 1px solid #D1D1D1;
+    margin-bottom: 30px;
+}
+
 
 /* navigation bar and logo styles */
 nav {
@@ -51,9 +73,21 @@ nav {
 }
 
 /* top player style */
+.top-players {
+    margin-bottom: 30px;
+}
+
+.section-title {
+    color: #562EFF;
+    font-size: 24px;
+    padding-bottom: 30px;
+}
+
 .players {
     display: grid;
-    grid-template-columns: repeat(3, 1fr)
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 30px;
+
 }
 
 .player {
@@ -64,4 +98,38 @@ nav {
 .player img {
     width: 56px;
     height: 56px;
+}
+
+.player-name {
+    margin-left: 16px;
+    font-size: 18px;
+}
+
+/* top blog  styles */
+.blogs{
+    display: grid;
+    grid-template-columns:  repeat(2,1fr);
+    grid-row-gap:26px;
+}
+.blog{
+    display: flex;
+}
+.blog .thumbnail img {
+    width: 177px;
+    height: 117px;
+}
+
+.blog-info {
+    margin-left: 16px;
+}
+.blog-title{
+    font-size: 20px;
+}
+.blog-author{
+    color: #9F9F9F;
+    font-size: 16px;
+}
+.blog-author a{
+    text-decoration: none;
+    color: #562EFF;
 }
