--- a/styles/style.css
+++ b/styles/style.css
@@ -11,13 +11,16 @@ body {
 
 main {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .coantiner {
     background-color: white;
     width: 870px;
     padding: 30px;
+    margin-top: 20px;
+    border-radius: 5px;
 }
 
 hr {
@@ -106,14 +109,16 @@ nav {
 }
 
 /* top blog  styles */
-.blogs{
+.blogs {
     display: grid;
-    grid-template-columns:  repeat(2,1fr);
-    grid-row-gap:26px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
 }
-.blog{
+
+.blog {
     display: flex;
 }
+
 .blog .thumbnail img {
     width: 177px;
     height: 117px;
@@ -122,14 +127,48 @@ nav {
 .blog-info {
     margin-left: 16px;
 }
-.blog-title{
+
+.blog-title {
     font-size: 20px;
 }
-.blog-author{
+
+.blog-author {
     color: #9F9F9F;
     font-size: 16px;
 }
-.blog-author a{
+
+.blog-author a {
     text-decoration: none;
     color: #562EFF;
+}
+
+/* course styles */
+.course .course-banner img {
+    height: 104px;
+    width: 224px;
+}
+
+.course-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.fa-star {
+    font-size: 12px;
+}
+
+.fa-star.filled {
+    color: #FFC014;
+}
+
+.fa-star.empty {
+    color: #AEAEAE;
+    opacity: 0.25;
+}
+
+.course-duration {
+    background: #FFE4E8;
+    border-radius: 12px;
+    color: #FF4A60;
 }
